--- a/04_Conditional_Statement.ipynb
+++ b/04_Conditional_Statement.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/04_Conditional_Statement.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/venkat52/fmml2021/blob/main/04_Conditional_Statement.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -60,43 +60,96 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eDT9R8AOqnsz"
+        "id": "eDT9R8AOqnsz",
+        "outputId": "14df213b-b341-42f7-b4cd-eb8ad7346088",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
         "type(a)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 22\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gbOsmJaIqiIP"
+        "id": "gbOsmJaIqiIP",
+        "outputId": "39f179dd-9afc-479e-a220-2875bbb77f00",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = int(a)\n",
         "type(a)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8D8fTIoYqdGE"
+        "id": "8D8fTIoYqdGE",
+        "outputId": "9c903934-2f97-4e8e-81e0-bea5d2cba5f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer b: 45\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cehfXMvowN0S"
+        "id": "cehfXMvowN0S",
+        "outputId": "cff409da-464c-48a5-abe4-ea9777e8c28c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "if (a > b):\n",
@@ -108,8 +161,17 @@
         "else:\n",
         "  print (\"a is neither greater than b,  nor less than b\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is less than b\n",
+            "which is clear\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -123,7 +185,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZF-tcVscuADN"
+        "id": "ZF-tcVscuADN",
+        "outputId": "83f287af-67d0-4b29-8540-0023ee2ee1f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
@@ -131,19 +197,40 @@
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 1\n",
+            "Enter an integer b: 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N2E5veph8_9V"
+        "id": "N2E5veph8_9V",
+        "outputId": "e057bd91-c32a-497f-cb10-7e5278efc47c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "if (a < b): print (\"a is lesser than b\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is lesser than b\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -157,7 +244,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SwO5vZ8LxGMA"
+        "id": "SwO5vZ8LxGMA",
+        "outputId": "3bb353c2-a9b6-42f0-9402-985209c00abe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter an integer a: \")\n",
@@ -165,19 +256,40 @@
         "b = input(\"Enter an integer b: \")\n",
         "b = int(b)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter an integer a: 8\n",
+            "Enter an integer b: 5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-SLed6y6xJoq"
+        "id": "-SLed6y6xJoq",
+        "outputId": "a575a134-735a-40fd-ee87-e1d0c5467dbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (\"a is less than b\") if (a < b) else print (\"a - {} is not less than b - {}.\".format(a, b))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a - 8 is not less than b - 5.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -191,25 +303,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JHGOgFs-vWbq"
+        "id": "JHGOgFs-vWbq",
+        "outputId": "2a8caa4a-b996-414f-d6f6-554c119589cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "a = input(\"Enter first string: \")\n",
         "b = input (\"Enter second string: \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter first string: 20\n",
+            "Enter second string: 20\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qgqqBPjAvLQx"
+        "id": "qgqqBPjAvLQx",
+        "outputId": "6e1c4dda-3f1b-4a4c-fb5a-39d1b92d0bb4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (\"first string comes earlier\") if (a<b) else print (\"second string comes earlier\") if (b<a) else print (\"both strings are same\")  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "both strings are same\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -223,13 +360,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b_QjChOW2VJY"
+        "id": "b_QjChOW2VJY",
+        "outputId": "dd2c3d5d-6f2d-4ac8-da10-6793d9d46e2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Your program should come here"
+        "# Your program should come here\n",
+        "x=input('enter a character: ')\n",
+        "vowels=['a','e','i','o','u','A','E','I','O','U']\n",
+        "if x in vowels:\n",
+        "  print('entered chracter is vowel') \n",
+        "else:\n",
+        "   print('entered charcter is consonant') "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter a character: i\n",
+            "entered chracter is vowel\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
