--- a/05_Flow_control_statement_For_loop.ipynb
+++ b/05_Flow_control_statement_For_loop.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/05_Flow_control_statement_For_loop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/venkat52/fmml2021/blob/main/05_Flow_control_statement_For_loop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,15 +39,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lHexb1UAseK6"
+        "id": "lHexb1UAseK6",
+        "outputId": "65f63b82-9b6e-4f3b-9ea2-0e0fe0782db2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# range\n",
         "for i in range(9, 19, 3):\n",
         "  print (i, end=\" \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9 12 15 18 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -61,7 +73,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8YRJCPP2vVPe"
+        "id": "8YRJCPP2vVPe",
+        "outputId": "c19a577f-01c2-423b-ff70-6c41b5e5a3c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# list\n",
@@ -69,8 +85,16 @@
         "for each_item in my_list:\n",
         "  print (each_item, end=\" \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3 4 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -80,19 +104,31 @@
       "source": [
         "my_list = ['a', 'e', 'i', 'o', 'u']\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lWRcH-oE0nr6"
+        "id": "lWRcH-oE0nr6",
+        "outputId": "dbb7380c-5f76-4d77-821d-2ffd3d52f6d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "test_char = input(\"Enter Character: \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter Character: P\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -106,19 +142,31 @@
         "    test_result = 'vowel'\n",
         "    break"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FXsvQh-C1C-m"
+        "id": "FXsvQh-C1C-m",
+        "outputId": "0f6ebe2d-3769-48d4-b8c0-169e3e349cad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (test_result)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "consonant\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -130,19 +178,34 @@
         "# create a list of all odd numbers from 1 to 20\n",
         "my_list = [number for number in range(1,20,2)]"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IbKt_IhW6Z4z"
+        "id": "IbKt_IhW6Z4z",
+        "outputId": "4459a150-4d71-4ee1-e88d-55e1e4f2e12c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "my_list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -154,19 +217,34 @@
         "# create a list of all odd numbers from 1 to 20\n",
         "my_list = [number for number in range(1,20) if (number % 2 == 1)]"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ahswgAU_qBVR"
+        "id": "ahswgAU_qBVR",
+        "outputId": "b8194c9e-3c47-4160-fe69-4a57a7753e6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "my_list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -180,13 +258,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Kw7G5iCumaY"
+        "id": "2Kw7G5iCumaY",
+        "outputId": "f4dbb53c-bfeb-4187-864b-852ccdd21ad2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# for instance if input list is [1, 2, 3, 4],  you need to create a list [1, 4, 9, 16]"
+        "# for instance if input list is [1, 2, 3, 4],  you need to create a list [1, 4, 9, 16]\n",
+        "input_list  = [1,2,3,4]\n",
+        "output_list =  []\n",
+        "for x in input_list:\n",
+        "  x=x*x\n",
+        "  output_list+=[x]\n",
+        "print(output_list)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
