--- a/07_Defining_Functions.ipynb
+++ b/07_Defining_Functions.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/07_Defining_Functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/venkat52/fmml2021/blob/main/07_Defining_Functions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,30 +39,98 @@
         "      return True\n",
         "  return False"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SLpNGCWYn6Er"
+        "id": "SLpNGCWYn6Er",
+        "outputId": "25c258ed-2846-4159-8563-0ec2d987b1a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "inList('Z', ['x', 'y', 'z'])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r_KUNOW3rCc6"
+        "id": "r_KUNOW3rCc6",
+        "outputId": "2f1a3cd0-0c9f-4503-d275-0a4c4e2ca59a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write a function to check whether a given number belongs to fibonacci series or not"
+        "# Write a function to check whether a given number belongs to fibonacci series or not\n",
+        "def is_fib(a):\n",
+        "  if a==1:\n",
+        "    return True\n",
+        "  x,y=1,1\n",
+        "  while (x<a):\n",
+        "    x=x+y\n",
+        "    if x==a:\n",
+        "      return True\n",
+        "    y=x+y\n",
+        "    if y==a:\n",
+        "      return True\n",
+        "  return False"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LpZbVlYV95oc",
+        "outputId": "8d125c37-78ca-43a6-cf39-8849904fc016",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "is_fib(21)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "markdown",
