--- a/10_Problem_Solution.ipynb
+++ b/10_Problem_Solution.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "10_Problem_Solution.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPdRyp10maCvf/RsIULclP0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/10_Problem_Solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/venkat52/fmml2021/blob/main/10_Problem_Solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -35,7 +34,7 @@
       "source": [
         "# Madagascar problem"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -46,7 +45,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -58,7 +57,7 @@
         "A = np.array([[20, 122, 20], [35,180, 35],[50, 220, 65], [70, 300, 30]])\n",
         "x = np.array([[0.05], [0.002], [0.02]])"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -69,7 +68,7 @@
       "source": [
         "# 4x3 . 3x1 = 4x1"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -80,7 +79,7 @@
       "source": [
         "y = np.matmul(A,x) - 4.0"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -91,19 +90,37 @@
       "source": [
         "Z = np.hstack((A,y))"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Oryf-5goVTxG"
+        "id": "Oryf-5goVTxG",
+        "outputId": "540c1cd8-c478-416f-e727-c89376b48120",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "Z"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 2.000e+01,  1.220e+02,  2.000e+01, -2.356e+00],\n",
+              "       [ 3.500e+01,  1.800e+02,  3.500e+01, -1.190e+00],\n",
+              "       [ 5.000e+01,  2.200e+02,  6.500e+01,  2.400e-01],\n",
+              "       [ 7.000e+01,  3.000e+02,  3.000e+01,  7.000e-01]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -116,19 +133,34 @@
         "  L = np.hstack((A,y))\n",
         "  return L"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6VqMLbRWVwL3"
+        "id": "6VqMLbRWVwL3",
+        "outputId": "422cdd65-18af-4ecb-8dff-f2a6edd5dd60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "print (RankArray(A,x))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 2.000e+01  1.220e+02  2.000e+01 -2.356e+00]\n",
+            " [ 3.500e+01  1.800e+02  3.500e+01 -1.190e+00]\n",
+            " [ 5.000e+01  2.200e+02  6.500e+01  2.400e-01]\n",
+            " [ 7.000e+01  3.000e+02  3.000e+01  7.000e-01]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
